--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,1 +1,81 @@
 /* Soluzione qui */
+@media (min-width:768px) {
+  #topbar {
+    justify-content: left;
+  }
+  .container {
+    padding: 2rem 0;
+  }
+  .recipe-origin {
+    display: inline;
+  }
+  .recipe-name {
+    font-size:2rem;
+  }
+
+  .ads {
+    display:block;
+  }
+}
+
+@media (min-width:768px) and (max-width:991px) {
+  .quick-notes ul{
+    display:flex;
+    flex-wrap: wrap;
+  }
+  .quick-notes ul li {
+    width: calc(100% / 3)
+  }
+}
+
+@media (min-width:992px) {
+  .recipe-name {
+    font-size:2.5 rem;
+  }
+
+  .recipe-card {
+    display:flex;
+  }
+
+  .recipe-card .recipe-video{
+    width:75%;
+  }
+
+  .recipe-video {
+    display: block;
+    max-height:500px;
+    aspect-ratio: 16 / 9;
+  }
+
+  .recipe-card .recipe-info {
+    width:25%;
+    max-width:405px;
+  }
+
+  .recipe-card iframe{
+    width:100%;
+    aspect-ratio: 16 / 9;
+  }
+
+  .social-networks .label {
+    display: inline;
+  }
+
+  footer {
+    text-align: left;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+@media (min-width:576px) {
+  .clearfix img {
+    float:left;
+    margin-right:1rem;
+  }
+
+  .social-networks .btn {
+    width:calc(100% / 5);
+  }
+}
