[add] personal css addon for image width in article on mobile view

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -79,3 +79,10 @@
     width:calc(100% / 5);
   }
 }
+
+/* Aggiunta personale  */
+@media (max-width:575px) {
+  .clearfix img {
+    max-width:100%;
+  }
+}
